2015-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.10 released.

2015-11-27  Carl Hetherington  <cth@carlh.net>

	* Fix download of some Doremi certificates (#763).

2015-11-27  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Hopefully fix truncated text in the colour conversion dialog
	on OS X.

2015-11-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.9 released.

2015-11-26  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2015-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.8 released.

2015-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.7 released.

2015-11-20  Carl Hetherington  <cth@carlh.net>

	* Lower default position of SubRip subtitles a bit.

2015-11-19  Carl Hetherington  <cth@carlh.net>

	* Adjust preview subtitle position to better match reality
	in some cases.

2015-11-19  c.hetherington  <cth@carlh.net>

	* Add menu option to make a DKDM for DCP-o-matic (#755).

2015-11-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.6 released.

2015-11-18  c.hetherington  <cth@carlh.net>

	* Add LUFS / LRA analysis using FFmpeg's ebur128 filter (#368).

2015-11-17  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp for fix to encoded date header in MXF files when
	encoding on Windows (#754).

	* Version 2.5.5 released.

2015-11-17  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix crash when previewing MXFs in some cases.

2015-11-16  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.4 released.

2015-11-15  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Basic support for trusted device lists in KDMs (#750).

2015-11-14  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.
