@@ -484,7 +484,9 @@ ReelWriter::write (PlayerSubtitles subs)
 		}
 	}
 
-	for (list<dcp::SubtitleString>::const_iterator i = subs.text.begin(); i != subs.text.end(); ++i) {
-		_subtitle_asset->add (*i);
+	BOOST_FOREACH (dcp::SubtitleString i, subs.text) {
+		i.set_in  (i.in()  - dcp::Time (_period.from.seconds(), i.in().tcr));
+		i.set_out (i.out() - dcp::Time (_period.from.seconds(), i.out().tcr));
+		_subtitle_asset->add (i);
 	}
 }
